# unbitrium

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  GOVERNANCE.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  STYLE.md  SUPPORT.md  TESTING.md  VERSIONING.md  docker-compose.yml  mkdocs.yml  osv-scanner.toml  pyproject.toml  requirements.txt  verify_installation.py
.github/: CLA.yml  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml  labels.yml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/codeql/: codeql-config.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  container.yml  dependency-review.yml  docs.yml  labeler.yml  lint.yml  release-drafter.yml  release.yml  scorecard.yml  stale.yml  typecheck.yml  wheels.yml
benchmarks/: README.md  run_benchmark.py  test_benchmarks.py
benchmarks/configs/: cifar10_fedavg.yaml  heterogeneity_sweep.yaml  mnist_fedsim.yaml
docs/: index.md
docs/api/: aggregators.md  benchmarks.md  core.md  datasets.md  metrics.md  partitioning.md  privacy.md  systems.md
docs/api/aggregators/: fedavg.md  feddyn.md  fedprox.md  fedsim.md
docs/getting_started/: installation.md  quickstart.md
docs/overrides/: .gitkeep
docs/references/: README.md  bibliography.bib  bibliography.json  bibliography.md
docs/research/: notes.md
docs/stylesheets/: material3.css
docs/tutorials/: tutorial_001.md  tutorial_002.md  tutorial_003.md  tutorial_004.md  tutorial_005.md  tutorial_006.md  tutorial_007.md  tutorial_008.md  tutorial_009.md  tutorial_010.md  tutorial_011.md  tutorial_012.md  tutorial_013.md  tutorial_014.md  tutorial_015.md  tutorial_016.md  tutorial_017.md  tutorial_018.md  tutorial_019.md  tutorial_020.md  tutorial_021.md  tutorial_022.md  tutorial_023.md  tutorial_024.md  tutorial_025.md  tutorial_026.md  tutorial_027.md  tutorial_028.md  tutorial_029.md  tutorial_030.md  tutorial_031.md  tutorial_032.md  tutorial_033.md  tutorial_034.md  tutorial_035.md  tutorial_036.md  tutorial_037.md  tutorial_038.md  tutorial_039.md  tutorial_040.md  (+160 more)
docs/validation/: AFL-DCS.md  ClientDriftNorm.md  DirichletLabelSkew.md  EMDLabelDistance.md  EntropyControlledPartition.md  FeatureShiftClustering.md  FedAdam.md  FedAvg.md  FedCM.md  FedDyn.md  FedProx.md  FedSim.md  GradientVariance.md  JSDivergence.md  Krum.md  MoDM.md  NMIRepresentations.md  QuantitySkewPowerLaw.md  README.md  TrimmedMean.md  pFedSim.md
examples/: README.md  benchmark_run.py  dirichlet_partitioning.py  quickstart.py  similarity_aggregation.py
src/unbitrium/: __init__.py  py.typed
src/unbitrium/aggregators/: __init__.py  afl_dcs.py  base.py  fedadam.py  fedavg.py  fedcm.py  feddyn.py  fedopt.py  fedprox.py  fedsim.py  krum.py  pfedsim.py  robust.py  trimmed_mean.py
src/unbitrium/bench/: __init__.py  artifacts.py  config.py  reports.py  runner.py
src/unbitrium/core/: __init__.py  engine.py  events.py  logging.py  provenance.py  rng.py  utils.py
src/unbitrium/datasets/: __init__.py  loaders.py  registry.py
src/unbitrium/metrics/: __init__.py  distribution.py  fairness.py  heterogeneity.py  optimization.py  privacy.py  representation.py  system.py
src/unbitrium/partitioning/: __init__.py  base.py  dirichlet.py  entropy_controlled.py  feature_shift.py  modm.py  quantity_skew.py
src/unbitrium/privacy/: __init__.py  differential.py  mechanism.py  secure_aggregation.py
src/unbitrium/simulation/: __init__.py  client.py  network.py  server.py  simulator.py
src/unbitrium/systems/: __init__.py  device.py  network.py  schedulers.py
tests/: conftest.py  test_aggregators.py  test_core.py  test_datasets.py  test_integration.py  test_metrics.py  test_partitioners.py  test_privacy.py  test_simulation.py  test_smoke.py  test_systems.py
